--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -1,6 +1,5 @@
 .gallery {
-  width: 100vw;
-  max-width: 1184px;
+  width: 100%;
   display: grid;
   grid-template-columns: repeat( auto-fit, minmax(284px, 1fr) );
   gap: 16px;
