--- a/blocks/lead-intro-wrapper/lead-intro-wrapper.css
+++ b/blocks/lead-intro-wrapper/lead-intro-wrapper.css
@@ -1,6 +1,6 @@
 .lead-intro-wrapper {
   max-width: 984px;
-  width: 100vw;
+  width: 100%;
   display: grid;
   gap: 92px;
   flex-direction: column;
