--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,5 @@
 .page {
-  width: 100vw;
+  width: 100%;
   min-width: 320px;
   margin:0;
   background: #2A2C2F;
