--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   max-width: 984px;
-  width: 100vw;
+  width: 100%;
   row-gap: 80px;
   box-sizing: border-box;
 }
